# WarZoneWebApp/Controllers/UsersController.cs
@@ -1,28 +1,60 @@
-﻿using Logic.Services;
+﻿using Helpers;
+using Logic.Services;
+using Microsoft.AspNetCore.Authentication;
+using Microsoft.AspNetCore.Authentication.Cookies;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Model;
+using Model.Database;
+using System;
+using System.Security.Claims;
+using WarZoneWebApp.Constants;
 
 [ApiController]
 [Route ("api/[controller]")]
 public class UsersController : ControllerBase {
-    private UserService UserService { get; set; }
+    private IUserService UserService { get; set; }
     private Context context;
 
-    public UsersController (Context context, UserService userService) {
+    public UsersController (Context context, IUserService userService) {
         this.context = context;
         UserService = userService;
     }
 
     [HttpPost]
-    public IActionResult Authenticate ([FromHeader] string login, [FromHeader] string password) {
-        var success = UserService.Authenticate (login, password);
+    [AllowAnonymous]
+    public ActionResult<AppUser> Authenticate ([FromHeader] string login, [FromHeader] string password) {
+        var success = UserService.Authenticate (login, password, out AppUser appUser);
 
         if (!success)
-            return BadRequest (new { message = "Username or password is incorrect" });
+            return new AppUser () { Id = -1 };
 
-        return Ok ();
+        SignIn (appUser);
+        return appUser.WithoutSensitiveData ();
     }
 
+    private void SignIn (AppUser appUser) {
+        string token = CreateToken ();
+        var claimsIdentity = CreateClaimsIdentity (token, appUser);
+
+        var taskSignResult = HttpContext.SignInAsync (CookieAuthenticationDefaults.AuthenticationScheme, new ClaimsPrincipal (claimsIdentity));
+        taskSignResult.GetAwaiter ().GetResult ();
+
+        //HttpContext.Session.Clear ();
+        // UserContextInitializer.Init (appUser, token);
+    }
+
+    private static string CreateToken () {
+        return Guid.NewGuid ().ToString ();
+    }
+
+    private ClaimsIdentity CreateClaimsIdentity (string token, AppUser appUser) {
+        var claimsIdentity = new ClaimsIdentity (CookieAuthenticationDefaults.AuthenticationScheme);
+        claimsIdentity.AddClaim (new Claim (ClaimTypes.Name, appUser.Login));
+        claimsIdentity.AddClaim (new Claim (CookieAuthenticationConst.TokenClaimType, token));
+
+        return claimsIdentity;
+    }
 }
 
 
